prevent horizontal overflow on tooltips

--- a/assets/sass/config/_config.scss
+++ b/assets/sass/config/_config.scss
@@ -32,3 +32,10 @@ $theme---option--border-three: blue;
 $tooltip---colour: #f78d8d;
 $tooltip---background: rgba(0, 0, 0, 0.8);
 $tooltip---border: solid 1px gray;
+
+// Breakpoint variables
+$breakpoint---xs: 480px;
+// $breakpoint---sm: 576px;
+$breakpoint---md: 768px;
+$breakpoint---lg: 992px;
+// $breakpoint---xl: 1200px;
